--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,21 +9,21 @@
             android:icon="@drawable/baseline_home_24"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_im_playing"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/games_i_m_playing" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_want_to_playing"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/games_i_want_to_play" />
 
         <item
-            android:id="@+id/nav_slideshow1"
+            android:id="@+id/nav_Ive_played"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/games_i_ve_played" />
 
         <item
-            android:id="@+id/nav_slideshow11"
+            android:id="@+id/nav_AddGame"
             android:icon="@drawable/baseline_games_24"
             android:title="@string/add_game" />
     </group>
