--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,28 @@
         android:name="com.example.gamevault.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_im_playing"
+        android:name="com.example.gamevault.ui.ImPlaying.ImPlaying"
+        android:label="ImPlaying"
+        tools:layout="@layout/fragment_im_playing" />
+
+    <fragment
+        android:id="@+id/nav_want_to_playing"
+        android:name="com.example.gamevault.ui.WantToPlay.WantToPlayFragment"
+        android:label="WantToPlay"
+        tools:layout="@layout/fragment_want_to_play" />
+
+    <fragment
+        android:id="@+id/nav_Ive_played"
+        android:name="com.example.gamevault.ui.IvePlayed.IvePlayedFragment"
+        android:label="IvaPlayed"
+        tools:layout="@layout/fragment_ive_played" />
+
+    <fragment
+        android:id="@+id/nav_AddGame"
+        android:name="com.example.gamevault.ui.AddGame.AddGameFragment"
+        android:label="AddGame"
+        tools:layout="@layout/fragment_add_game" />
 </navigation>
