--- a/app/src/main/res/layout/fragment_im_playing_list.xml
+++ b/app/src/main/res/layout/fragment_im_playing_list.xml
@@ -3,11 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.example.gamevault.ui.ImPlaying.ImPlaying"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:paddingHorizontal="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.ImPlaying.ImPlaying"
     tools:listitem="@layout/fragment_im_playing" />
