--- a/app/src/main/res/layout/fragment_want_to_play_list.xml
+++ b/app/src/main/res/layout/fragment_want_to_play_list.xml
@@ -6,8 +6,8 @@
     android:name="com.example.gamevault.ui.WantToPlay.WantToPlayFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.WantToPlay.WantToPlayFragment"
     tools:listitem="@layout/fragment_want_to_play" />
