--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,17 +11,6 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.gamevault.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.gamevault.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_im_playing"
@@ -46,4 +35,12 @@
         android:name="com.example.gamevault.ui.AddGame.AddGameFragment"
         android:label="AddGame"
         tools:layout="@layout/fragment_add_game" />
+
+    <fragment
+        android:id="@+id/userProfileFragment"
+        android:name="com.example.gamevault.ui.userProfile.UserProfileFragment"
+        android:label="UserProfile"
+        tools:layout="@layout/fragment_user_profile" />
+
+
 </navigation>
