--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,14 +19,27 @@
       android:layout_marginEnd="32dp"/>
 
   <EditText
+      android:id="@+id/etEmailReg"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:hint="Email"
+      android:inputType="textEmailAddress"
+      app:layout_constraintTop_toBottomOf="@id/etUsernameReg"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginTop="16dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginEnd="32dp"/>
+
+  <EditText
       android:id="@+id/etPasswordReg"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="Password"
       android:inputType="textPassword"
-      app:layout_constraintTop_toBottomOf="@id/etUsernameReg"
-      app:layout_constraintStart_toStartOf="@id/etUsernameReg"
-      app:layout_constraintEnd_toEndOf="@id/etUsernameReg"
+      app:layout_constraintTop_toBottomOf="@id/etEmailReg"
+      app:layout_constraintStart_toStartOf="@id/etEmailReg"
+      app:layout_constraintEnd_toEndOf="@id/etEmailReg"
       android:layout_marginTop="16dp"/>
 
   <EditText
@@ -49,5 +62,4 @@
       app:layout_constraintStart_toStartOf="@id/etConfirmPassword"
       app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"
       android:layout_marginTop="16dp"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
