--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,6 +11,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="Username"
+      android:contentDescription="Field to enter username"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +24,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="Email"
+      android:contentDescription="Field to enter email address"
       android:inputType="textEmailAddress"
       app:layout_constraintTop_toBottomOf="@id/etUsernameReg"
       app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +38,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="Password"
+      android:contentDescription="Field to enter password"
       android:inputType="textPassword"
       app:layout_constraintTop_toBottomOf="@id/etEmailReg"
       app:layout_constraintStart_toStartOf="@id/etEmailReg"
@@ -47,6 +50,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="Confirm Password"
+      android:contentDescription="Field to confirm password"
       android:inputType="textPassword"
       app:layout_constraintTop_toBottomOf="@id/etPasswordReg"
       app:layout_constraintStart_toStartOf="@id/etPasswordReg"
@@ -58,6 +62,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="Register"
+      android:contentDescription="Button to register the account"
       app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
       app:layout_constraintStart_toStartOf="@id/etConfirmPassword"
       app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"
