--- a/app/src/main/res/layout/fragment_add_game.xml
+++ b/app/src/main/res/layout/fragment_add_game.xml
@@ -1,20 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.AddGame.AddGameFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvHelloBlankFragment"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Game"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        android:padding="16dp">
+
+        <!-- Guideline para definir uma margem consistente à direita -->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="16dp" />
+
+        <!-- Guideline para definir uma margem consistente à esquerda -->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="16dp" />
+
+        <!-- Título do Jogo -->
+        <EditText
+            android:id="@+id/editTextGameTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="game title"
+            android:inputType="textCapWords"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Distribuidora -->
+        <EditText
+            android:id="@+id/editTextGameDistributor"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/game_description"
+            android:inputType="textCapWords|textMultiLine"
+            android:minLines="3"
+            android:maxLines="5"
+            android:gravity="top|start"
+            android:scrollbars="vertical"
+            android:overScrollMode="always"
+            app:layout_constraintTop_toBottomOf="@id/editTextGameTitle"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Ano de Lançamento -->
+        <EditText
+            android:id="@+id/editTextGameYear"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/release_year"
+            android:inputType="number"
+            app:layout_constraintTop_toBottomOf="@id/editTextGameDistributor"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+
+        <!-- Tempo Estimado -->
+        <EditText
+            android:id="@+id/editTextGameDuration"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/estimated_time1"
+            android:inputType="numberDecimal"
+            app:layout_constraintTop_toBottomOf="@id/editTextGameYear"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+
+        <!-- Seção de Status -->
+        <TextView
+            android:id="@+id/statusLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Status do Jogo"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@id/editTextGameDuration" />
+
+        <Spinner
+            android:id="@+id/spinnerGameStatus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:entries="@array/game_status_options"
+            app:layout_constraintTop_toBottomOf="@id/statusLabel"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+
+        <!-- Botões e Imagem -->
+        <ImageView
+            android:id="@+id/imageViewGameCover"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:contentDescription="@string/game_cover"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintTop_toBottomOf="@id/spinnerGameStatus"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+
+        <Button
+            android:id="@+id/buttonAddPhoto"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/add_photo"
+            app:layout_constraintTop_toBottomOf="@id/imageViewGameCover"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+
+        <Button
+            android:id="@+id/buttonSubmitGame"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/purple_700"
+            android:text="@string/submit_game"
+            app:layout_constraintTop_toBottomOf="@id/buttonAddPhoto"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+
+        <!-- Botão para Seleção de Plataformas -->
+        <Button
+            android:id="@+id/buttonSelectPlatforms"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Selecionar Plataformas"
+            app:layout_constraintTop_toBottomOf="@id/buttonSubmitGame"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+            android:layout_marginTop="16dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
