--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Username"
+        android:contentDescription="Input field for Username"
+        android:inputType="textPersonName"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +25,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Password"
+        android:contentDescription="Input field for Password"
         android:inputType="textPassword"
+        android:importantForAutofill="no"
         app:layout_constraintTop_toBottomOf="@id/etUsername"
         app:layout_constraintStart_toStartOf="@id/etUsername"
         app:layout_constraintEnd_toEndOf="@id/etUsername"
@@ -34,6 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:contentDescription="Button to log in"
         app:layout_constraintTop_toBottomOf="@id/etPassword"
         app:layout_constraintStart_toStartOf="@id/etPassword"
         app:layout_constraintEnd_toEndOf="@id/etPassword"
@@ -44,6 +49,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Register"
+        android:contentDescription="Button to register a new account"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="@id/btnLogin"
         app:layout_constraintEnd_toEndOf="@id/btnLogin"
@@ -54,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Keep me logged in"
+        android:contentDescription="Checkbox to stay logged in"
         app:layout_constraintTop_toBottomOf="@id/btnRegister"
         app:layout_constraintStart_toStartOf="@id/btnRegister"
         android:layout_marginTop="16dp"/>
