--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- res/values/colors.xml -->
+
+        <color name="background_color">#FFFFFF</color>
+        <color name="text_color">#000000</color>
+        <color name="button_color">#FF6200EE</color>
+
+
 </resources>
