--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -5,28 +5,22 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <!-- ImageView para a capa do jogo -->
     <ImageView
         android:id="@+id/imageViewGameCover"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/game_cover"
         app:srcCompat="@drawable/ic_launcher_background" />
 
-    <!-- TextView para o título do jogo -->
     <TextView
         android:id="@+id/textViewGameTitle"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/imageViewGameCover"
-        app:layout_constraintTop_toTopOf="@id/imageViewGameCover"
-        app:layout_constraintBottom_toBottomOf="@id/imageViewGameCover"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/imageViewGameCover"
+        android:layout_marginTop="8dp"
         android:text="@string/game_title" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
