--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,16 +7,21 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.gamevault.ui.home.HomeFragment"
+        android:name="com.example.gamevault.ui.home.HomeFragment1"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home1">
 
-    <fragment
-        android:id="@+id/userProfileFragment"
-        android:name="com.example.gamevault.ui.userProfile.UserProfileFragment"
-        android:label="@string/menu_user_profile"
-        tools:layout="@layout/fragment_user_profile">
+        <action
+            android:id="@+id/actionNavHomeToGameDetailsFragment"
+            app:destination="@id/gameDetailsFragment" />
+
     </fragment>
 
+    <fragment
+        android:id="@+id/gameDetailsFragment"
+        android:name="com.example.gamevault.ui.GameDetails.GameDetailsFragment"
+        android:label="@string/menu_game_details"
+        tools:layout="@layout/fragment_game_details">
+    </fragment>
 
 </navigation>
